feat(eslint,frontend): eslint fix, frontend variables
Fix eslint config.
Add sass with 7:1 architecture, setup reuseable variables
based on design system.

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -5,9 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>frontend</title>
+
+    <link
+      rel="preload"
+      href="/fonts/Manrope/Manrope-VariableFont_wght.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>asd!</h1>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
