--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -15,9 +15,7 @@
     />
   </head>
   <body>
-    <div id="app">
-      <h1>asd!</h1>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
