feat(meta): meta tags, og, favicons

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Home | Savely</title>
+    <meta
+      name="description"
+      content="Savely is a web app where you can save, organize, and quickly access all your favorite links. Keep your bookmarks in one place and manage them easily."
+    />
+
+    <meta name="keywords" content="bookmarks, save links, organize links, Savely" />
+    <meta property="og:title" content="Savely - Save and Organize Your Links" />
+    <meta
+      property="og:description"
+      content="Savely is a web app where you can save, organize, and quickly access all your favorite links. Keep your bookmarks in one place and manage them easily."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/images/og-image.png" />
+    <meta property="og:url" content="https://savely-frontend.vercel.app/" />
+    <meta name="author" content="KamilEngineer" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Savely - Save and Organize Your Links" />
+    <meta
+      name="twitter:description"
+      content="Savely is a web app where you can save, organize, and quickly access all your favorite links. Keep your bookmarks in one place and manage them easily."
+    />
+    <meta name="twitter:image" content="/images/og-image.png" />
 
     <link
       rel="preload"
@@ -13,6 +35,11 @@
       type="font/ttf"
       crossorigin="anonymous"
     />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="app"></div>
